--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -11,7 +11,7 @@
 @book{BTI:2012,
 	author = "{Biro Teknologi Informasi UNPAR}",
 	publisher = {Biro Teknologi Informasi UNPAR},
-	title = {BUKU PANDUAN LAYANAN TIK 2012},
+	title = {Buku Panduan Layanan TIK 2012},
 	year = {2012}
 }
 
@@ -49,7 +49,7 @@
 
 @misc{prasyaratIT,
 	author = "{Program Studi Teknik Informatika}",
-	title = "{PRASAYARAT MATA KULIAH SEMESTER GANJIL 2015/2016}",
+	title = "{Prasyarat Mata Kuliah Semester Ganjil 2015/2016}",
 	howpublished = "\url{https://tinyurl.com/lionov}",
 	year = {2015}, 
 	month = "{Juli}",
