--- a/doc/ProgressReport/document.tex
+++ b/doc/ProgressReport/document.tex
@@ -9,6 +9,7 @@
 \usepackage{etoolbox}
 \usepackage{setspace} 
 \usepackage{lipsum} 
+\usepackage{url}
 \setlength{\headsep}{30pt}
 \usepackage[inner=2cm,outer=2.5cm,top=2.5cm,bottom=2cm]{geometry} %margin
 % \pagestyle{empty}
@@ -74,7 +75,7 @@ Detail bagian pekerjaan skripsi sesuai dengan rencana kerja/laporan perkembangan
 		\item Melakukan wawancara kepada mahasiswa Program Studi Teknik Informatika untuk mendapatkan informasi
 penggunaan Portal Akademik Mahasiswa.\\
 		{\bf status :} Ada sejak rencana kerja skripsi.\\
-		{\bf hasil :} Wawancara sudah dilakukan kepada 18 mahasiswa Program Studi Teknik Informatika. Bukti-bukti wawancara dapat dilihat pada \url{https://github.com/herfanheryandi/Skripsi/tree/master/draft/Interview}.
+		{\bf hasil :} Wawancara sudah dilakukan kepada 18 mahasiswa Program Studi Teknik Informatika. Bukti-bukti wawancara dapat dilihat pada \url{https://github.com/herfanheryandi/Skripsi/tree/master/draft/Interview/}.
 
 		\item Menganalisis Portal Akademik Mahasiswa.\\
 		{\bf status :} Ada sejak rencana kerja skripsi.\\
@@ -94,7 +95,7 @@ penggunaan Portal Akademik Mahasiswa.\\
 
 		\item Menulis dokumen skripsi\\
 		{\bf status :} Ada sejak rencana kerja skripsi.\\
-		{\bf hasil :} Dokumen skripsi sudah ditulis hingga BAB 3.
+		{\bf hasil :} Dokumen skripsi sudah ditulis hingga bab 3.
 
 	\end{enumerate}
 
@@ -111,8 +112,8 @@ Persentase penyelesaian skripsi sampai dengan dokumen ini dibuat dapat dilihat p
     4   & 14  &   &  14 &  & 6\\ \hline
     5   & 14  &   & 14 &  & 5\\ \hline
     6   & 14 &   & 14  &  & 3\\ \hline
-    7   & 16  & 8  & 8 &  {\footnotesize bab 1, bab 2, dan bab 3 di S1} & 8\\ \hline
-    Total  & 100  & 50  & 50 &  & 62\\ \hline
+    7   & 16  & 8  & 8 &  {\footnotesize bab 1, bab 2, dan bab 3 di S1} & 5\\ \hline
+    Total  & 100  & 50  & 50 &  & 59\\ \hline
                           \end{tabular}										
 \end{center}
 
@@ -135,7 +136,7 @@ Kendala - kendala yang dihadapi selama mengerjakan skripsi :
 
 \vspace{1cm}
 \centering Bandung, \tanggal\\
-\vspace{2cm} \nama \\ 
+\vspace{1.8cm} \nama \\ 
 \vspace{1cm}
 
 Menyetujui, \\
@@ -150,10 +151,10 @@ Menyetujui, \\
 % \centering Bandung, \makebox[0.5cm]{\hrulefill}/\makebox[0.5cm]{\hrulefill}/2013\\
 \vspace{2cm} Nama: \pemB \\ Pembimbing Pendamping
 \end{minipage}
-\vspace{0.5cm}
+\vspace{0.3cm}
 }{
 % \centering Bandung, \makebox[0.5cm]{\hrulefill}/\makebox[0.5cm]{\hrulefill}/2013\\
-\vspace{2cm} Nama: \pembA \\ Pembimbing Tunggal
+\vspace{1.8cm} Nama: \pembA \\ Pembimbing Tunggal
 }
 `
 \end{document}
